<resources>
    <string name="app_name">ClassConnect</string>
    <string name="Username">Username</string>
    <string name="User_icon">User Icon</string>
    <string name="Password">Password</string>
    <string name="btnLogin">Log In</string>
    <string name="ForgotPassword">Forgot password?</string>
    <string name="NewAccount">Don\'t have an account?</string>
    <string name="GreetingsLogIn">Welcome,</string>
    <string name="DontHaveAcc">Don\'t have an account?</string>
    <string name="tvSignUp"><u>Sign up now</u></string>
    <string name="tvGreetings2">Glad to see you!</string>
    <string name="tvCreateAccount">Create User Account</string>
    <string name="tvNewAccount">to get started now!</string>
    <string name="inpConfirmPassword">Confirm Password</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="HaveAcc">Already have an account?</string>
    <string name="LogInNow"><u>Login Now</u></string>
    <string name="tvSignUpHeader">Sign Up</string>
    <string name="tutor">Tutor</string>
    <string name="inputName">Name</string>
    <string name="forgot_pass_hint">Enter your email</string>
    <string name="recover_pass_btn">Recover password</string>
    <string name="Student">Student</string>
    <string name="inputPhone">Phone</string>
    <string name="inputEmail">Email</string>
    <string name="inputProgram">Program</string>
    <string name="inputInterest">Interests (separate with coma)</string>
    <string name="radioGroupLabel">Select initial role</string>
    <string name="uploadPhotoBtn">Upload a photo</string>
    <string name="inputAvatar">Picture(URL)</string>
    <string name="btnRegister">Register</string>
    <string name="tvBack"><u><![CDATA[Go Back>>]]></u></string>
    <string name="inputInstitution">Institution</string>
    <string name="Circles">Circles</string>
    <string name="ProfilePic">Profile image</string>
    <string name="StudentID">Student ID:</string>
    <string name="Name">Name:</string>
    <string name="LastName">Last Name:</string>
    <string name="Email">Email:</string>
    <string name="Phone_prof">Phone:</string>
    <string name="Program">Program:</string>
    <string name="Password_profile">Password:</string>
    <string name="Change_password"><u>Change</u></string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="TutorID">Tutor ID:</string>
    <string name="Institution">Institution:</string>
    <string name="ChangePassword">Enter Your New Credentials</string>
    <string name="inputOldPassword">Current Password</string>
    <string name="inputNewPassword">New Password</string>
    <string name="inputConfirmNewPassword">Confirm New Password</string>
    <string name="btnConfirm">Confirm</string>
    <string name="tvEditTutorProfile">Edit Your profile</string>
    <string name="btnConfirmEditProfile">Confirm Edit</string>
    <string name="previewImage">image placeholder</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="addSession"><u>Add Session+</u></string>
    <string name="tvCreateCourse">Create Course</string>
    <string name="inpCourseName">Course Name</string>
    <string name="btnCreate">Create</string>
    <string name="tvRemove"><u>Remove</u></string>
    <string name="tvAddStudent"><u>Add Student+</u></string>
    <string name="AddStudent">Enter Student ID</string>
    <string name="StudentID_input">Student ID</string>
    <string name="btnAddStudent">Add Student</string>
    <string name="CourseID">CourseID:</string>
    <string name="CourseCode">Course Code:</string>
    <string name="tvCreateSession">Create Session</string>
    <string name="inpDateSession">Date (YYYY-MM-DD)</string>
    <string name="inpStartTime">Start Time (HH:MM)</string>
    <string name="inpDuration">Duration (minutes)</string>
    <string name="inpLocation">Location (Room / Online Link)</string>
    <string name="inpMaxParticipant">Max Participant</string>
    <string name="inpDescription">Description (optional)</string>
    <string name="EditSession">Edit Session</string>
    <string name="JoinCourse">Join Course</string>
    <string name="inpCourseID">Course ID</string>
    <string name="Session">Session</string>
    <string name="SessionStartTime">Session Start Time:</string>
    <string name="SessionDuration">Duration:</string>
    <string name="SessionLocation">Location:</string>
    <string name="SessionDescription">Description:</string>
    <string name="RSVP">RSVP:</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Maybe">Maybe</string>
    <string name="inpOptionalNotes">Optional Notes</string>
    <string name="btnSubmitRSVP">Submit RSVP</string>
    <string name="btnJoinSession">Join Session</string>
    <string name="tvSessionRemainder">Session Remainder</string>
    <string name="tvSessionID">Session ID:</string>
    <string name="tvSessionStartTime">Session Start Time:</string>
    <string name="tvSessionMessage">Hello, this is a reminder that you have upcoming scheduled session. Please let me know if you would not be able to attend this Session.</string>
    <string name="tvParticipants">Participants:</string>
    <string name="tvSessionParticipation">Participation: </string>
    <string name="btnEditSession">Edit Session</string>
    <string name="btnCancelSession">Cancel Session</string>
    <string name="btnSendRemainders">Send Remainders</string>
    <string name="tvCourseName">Course Name:</string>
    <string name="tvShortMessage">You have upcoming session!</string>
    <string name="tvViewParticipants"><u>View Participants</u></string>
    <string name="tvStudentName">Student Name</string>
    <string name="menuProfile">Profile</string>
    <string name="menuCourses">Courses</string>
    <string name="menuNotifications">Notifications</string>
    <string name="menuSign_out">Sign out</string>
</resources>