<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/nameRegisterInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inputName"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginHeader2" />

    <EditText
        android:id="@+id/emailRegisterInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inputEmail"
        android:inputType="text|textEmailAddress|textAutoComplete"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/nameRegisterInput"
        app:layout_constraintStart_toStartOf="@+id/nameRegisterInput"
        app:layout_constraintTop_toBottomOf="@+id/nameRegisterInput" />

    <EditText
        android:id="@+id/passwordRegisterInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/emailRegisterInput"
        app:layout_constraintStart_toStartOf="@+id/emailRegisterInput"
        app:layout_constraintTop_toBottomOf="@+id/emailRegisterInput" />

    <EditText
        android:id="@+id/confirmPasswordRegisterInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inpConfirmPassword"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordRegisterInput"
        app:layout_constraintStart_toStartOf="@+id/passwordRegisterInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterInput" />

    <EditText
        android:id="@+id/interestRegisterInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inputInterest"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordRegisterInput"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordRegisterInput"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegisterInput" />

    <Button
        android:id="@+id/registerRegisterButton"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FFFFFF"
        android:padding="12dp"
        android:text="@string/btnSignUp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/roleRegisterGroup"
        app:layout_constraintStart_toStartOf="@+id/roleRegisterGroup"
        app:layout_constraintTop_toBottomOf="@+id/imageRegisterPreview" />

    <Button
        android:id="@+id/addImageRegisterButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#FFFFFF"
        android:padding="12dp"
        android:text="@string/uploadPhotoBtn"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageRegisterPreview"
        app:layout_constraintStart_toEndOf="@+id/imageRegisterPreview"
        app:layout_constraintTop_toTopOf="@+id/imageRegisterPreview" />

    <TextView
        android:id="@+id/tvLoginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvCreateAccount"
        android:textColor="#FDFDFD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginHeader2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/tvNewAccount"
        android:textColor="#FFFEFE"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginHeader"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/tvLoginHeader"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginHeader" />

    <TextView
        android:id="@+id/tvDontHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="24dp"
        android:text="@string/HaveAcc"
        android:textColor="#040404"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerRegisterButton" />

    <TextView
        android:id="@+id/tvLogInNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/LogInNow"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tvDontHaveAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvDontHaveAcc"
        app:layout_constraintTop_toTopOf="@+id/tvDontHaveAcc"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/roleGroupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/radioGroupLabel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/interestRegisterInput"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="@+id/interestRegisterInput"
        app:layout_constraintTop_toBottomOf="@+id/interestRegisterInput" />

    <RadioGroup
        android:id="@+id/roleRegisterGroup"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/roleGroupLabel"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/roleGroupLabel"
        app:layout_constraintTop_toTopOf="@+id/roleGroupLabel">

        <RadioButton
            android:id="@+id/radio_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/Student"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radio_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutor"
            android:textColor="@color/white" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageRegisterPreview"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/previewImage"
        app:layout_constraintEnd_toEndOf="@+id/roleRegisterGroup"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/roleRegisterGroup"
        app:layout_constraintTop_toBottomOf="@+id/roleRegisterGroup"
        app:srcCompat="@drawable/icon_account_circle" />


</androidx.constraintlayout.widget.ConstraintLayout>