<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/emailLoginInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inputOldPassword"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvChangePassword"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/tvChangePassword"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />

    <EditText
        android:id="@+id/passwordLoginInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inputNewPassword"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/emailLoginInput"
        app:layout_constraintStart_toStartOf="@+id/emailLoginInput"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginInput" />

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inputConfirmNewPassword"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordLoginInput"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/passwordLoginInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginInput" />

    <TextView
        android:id="@+id/tvForgotPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ForgotPassword"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#FFFFFF"
        android:padding="12dp"
        android:text="@string/btnConfirm"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/ChangePassword"
        android:textColor="#FDFDFD"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tvBack"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btnConfirm"
        app:layout_constraintStart_toStartOf="@+id/btnConfirm"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>