<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".CreateSessionActivity">

    <TextView
        android:id="@+id/tvCreateSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/tvCreateSession"
        android:textColor="#FDFDFD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/inputSessionDate"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inpDateSession"
        android:inputType="date"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvCreateSession"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/tvCreateSession"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateSession" />

    <EditText
        android:id="@+id/inputTime"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inpStartTime"
        android:inputType="time"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/inputSessionDate"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/inputSessionDate"
        app:layout_constraintTop_toBottomOf="@+id/inputSessionDate" />

    <EditText
        android:id="@+id/inputDuration"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inpDuration"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/inputTime"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/inputTime"
        app:layout_constraintTop_toBottomOf="@+id/inputTime" />

    <EditText
        android:id="@+id/inputLocation"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inpLocation"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/inputDuration"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/inputDuration"
        app:layout_constraintTop_toBottomOf="@+id/inputDuration" />

    <EditText
        android:id="@+id/inputMaxParticipant"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inpMaxParticipant"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/inputLocation"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/inputLocation"
        app:layout_constraintTop_toBottomOf="@+id/inputLocation" />

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inpDescription"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/inputMaxParticipant"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/inputMaxParticipant"
        app:layout_constraintTop_toBottomOf="@+id/inputMaxParticipant" />

    <Button
        android:id="@+id/btnCreateSession"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:text="@string/btnCreate"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/inputDescription"
        app:layout_constraintStart_toStartOf="@+id/inputDescription"
        app:layout_constraintTop_toBottomOf="@+id/inputDescription" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvBack"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btnCreateSession"
        app:layout_constraintStart_toStartOf="@+id/btnCreateSession"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateSession" />


</androidx.constraintlayout.widget.ConstraintLayout>