<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvEditStudentProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tvEditTutorProfile"
        android:textColor="#FDFDFD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="300444333"
        android:textColor="#FFFEFE"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tvEditStudentProfile"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="@+id/tvEditStudentProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvEditStudentProfile" />

    <EditText
        android:id="@+id/uEditName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inputName"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvStudentID"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/tvStudentID"
        app:layout_constraintTop_toBottomOf="@+id/tvStudentID" />

    <EditText
        android:id="@+id/uEditPhone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inputPhone"
        android:inputType="phone"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/uEditName"
        app:layout_constraintStart_toStartOf="@+id/uEditName"
        app:layout_constraintTop_toBottomOf="@+id/uEditName" />

    <EditText
        android:id="@+id/uEditInterest"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inputInterest"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/uEditPhone"
        app:layout_constraintStart_toStartOf="@+id/uEditPhone"
        app:layout_constraintTop_toBottomOf="@+id/uEditPhone" />

    <EditText
        android:id="@+id/uEditProgram"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/inputProgram"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="@+id/uEditInterest"
        app:layout_constraintStart_toStartOf="@+id/uEditInterest"
        app:layout_constraintTop_toBottomOf="@+id/uEditInterest" />

    <EditText
        android:id="@+id/inputAvatarURL"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/inputAvatar"
        android:inputType="textUri"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/uEditProgram"
        app:layout_constraintStart_toStartOf="@+id/uEditProgram"
        app:layout_constraintTop_toBottomOf="@+id/uEditProgram" />

    <Button
        android:id="@+id/btnConfirmEditProfile"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:text="@string/btnConfirmEditProfile"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/inputAvatarURL"
        app:layout_constraintStart_toStartOf="@+id/inputAvatarURL"
        app:layout_constraintTop_toBottomOf="@+id/inputAvatarURL" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvBack"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btnConfirmEditProfile"
        app:layout_constraintStart_toStartOf="@+id/btnConfirmEditProfile"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirmEditProfile" />
</androidx.constraintlayout.widget.ConstraintLayout>