<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".AddStudentActivity">

    <TextView
        android:id="@+id/tvJoinCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/AddStudent"
        android:textColor="#FDFDFD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputCourseID"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/StudentID_input"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="#FFFEFE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvJoinCourse"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/tvJoinCourse"
        app:layout_constraintTop_toBottomOf="@+id/tvJoinCourse" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:text="@string/btnAddStudent"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/inputCourseID"
        app:layout_constraintStart_toStartOf="@+id/inputCourseID"
        app:layout_constraintTop_toBottomOf="@+id/inputCourseID" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvBack"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btnCreate"
        app:layout_constraintStart_toStartOf="@+id/btnCreate"
        app:layout_constraintTop_toBottomOf="@+id/btnCreate" />

</androidx.constraintlayout.widget.ConstraintLayout>